1.1 2022-07-14
~~~~~~~~~~~~~~

* Enabled filtering on geography types.

* Compatibility fixes for muninn 5.x.

1.0.1 2019-03-14
~~~~~~~~~~~~~~~~

* Small cleanup and fixes


1.0 2018-06-19
~~~~~~~~~~~~~~

* First official release of muninn-django.