@@ -1,3 +1,6 @@
+* Fix compatibility issue with django-filter 2.x.
+  muninn-django now requires django-filter 2.0 or later.
+
 1.1 2022-07-14
 ~~~~~~~~~~~~~~
 
